// source: rpc_generate_project.proto

syntax = "proto3";

package pb.v1;

option go_package = "github.com/zcubbs/power";

message GenerateProjectRequest {
  string blueprintId = 1;
  map<string, string> values = 2; // map of option custom values
}

message GenerateProjectResponse {
  string downloadUrl = 1;
}
